feat: Updating meals
Removing foods from meal

--- a/app/src/main/res/layout/activity_add_new_meal_2.xml
+++ b/app/src/main/res/layout/activity_add_new_meal_2.xml
@@ -116,6 +116,7 @@
 
 
             <TextView
+                android:textStyle="bold"
                 android:layout_marginLeft="40dp"
                 android:gravity="center_vertical"
                 android:minHeight="?android:attr/listPreferredItemHeight"
