--- a/app/src/main/res/layout/activity_select_foods.xml
+++ b/app/src/main/res/layout/activity_select_foods.xml
@@ -7,6 +7,7 @@
     tools:context=".view.meals.register.SelectFoodsActivity">
 
     <AutoCompleteTextView
+        android:hint="@string/food_name"
         android:inputType="textAutoComplete"
         android:imeOptions="actionDone"
         android:id="@+id/add_foods_edit_text"
