--- a/app/src/main/res/layout/progress_dialog.xml
+++ b/app/src/main/res/layout/progress_dialog.xml
@@ -18,7 +18,7 @@
             android:layout_centerInParent="true"
             android:layout_margin="16dp"
             android:tint="@color/white"
-            android:src="@drawable/ic_hour_glass" />
+            android:src="@drawable/ic_dialog_wait" />
 
     </RelativeLayout>
 
