--- a/app/src/main/res/layout/fragment_generate_reports.xml
+++ b/app/src/main/res/layout/fragment_generate_reports.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout android:orientation="vertical"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.meals.list.ListMealsFragment"
-    xmlns:custom="http://schemas.android.com/apk/res-auto">
+    android:orientation="vertical"
+    tools:context=".view.meals.list.ListMealsFragment">
 
     <com.github.chuross.library.ExpandableLayout
         android:id="@+id/period_expandable_layout"
@@ -40,7 +40,6 @@
     </com.github.chuross.library.ExpandableLayout>
 
     <TextView
-        android:visibility="visible"
         android:id="@+id/generate_report_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -50,15 +49,16 @@
         android:layout_marginTop="8dp"
         android:gravity="center"
         android:text="@string/select_report_period"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
-    <com.github.barteksc.pdfviewer.PDFView
-        android:visibility="invisible"
+    <android.support.v4.view.ViewPager
         android:id="@+id/pdfView"
+        android:visibility="invisible"
+        android:background="#fff"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
