--- a/app/src/main/res/layout/fragment_list_meals.xml
+++ b/app/src/main/res/layout/fragment_list_meals.xml
@@ -37,4 +37,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/navigation_header" />
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/add_new_meal_button"
+        android:src="@drawable/ic_add"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
