--- a/app/src/main/res/layout/pdf_view_pager_fragment.xml
+++ b/app/src/main/res/layout/pdf_view_pager_fragment.xml
@@ -5,7 +5,7 @@
     android:background="#fff"
     android:orientation="vertical">
 
-    <ImageView
+    <com.github.chrisbanes.photoview.PhotoView
         android:id="@+id/pdf_page_bitmap"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
