--- a/app/src/main/res/menu/edit_meal_menu.xml
+++ b/app/src/main/res/menu/edit_meal_menu.xml
@@ -9,11 +9,11 @@
         app:showAsAction="always"
         />
 
-    <item
-        android:id="@+id/save_meal_menu_item"
-        android:title="@string/save_meal"
-        android:icon="@drawable/ic_check"
-        app:showAsAction="always"
-        />
+    <!--<item-->
+        <!--android:id="@+id/save_meal_menu_item"-->
+        <!--android:title="@string/save_meal"-->
+        <!--android:icon="@drawable/ic_check"-->
+        <!--app:showAsAction="always"-->
+        <!--/>-->
 
 </menu>
