--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -2,30 +2,28 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
 
-        <SwitchPreference
-            android:icon="@drawable/pref_icon_reminder"
-            android:key="PREFERENCE_ENABLE_REMINDER"
-            android:summary="@string/preferences_enable_reminder_summary"
-            android:title="@string/preferences_enable_reminder" />
+    <PreferenceCategory
+        android:title="@string/preference_category_reminders">
 
-        <Preference
+        <SwitchPreference
             android:key="PREFERENCE_BREAKFAST_REMINDER_TIME"
             android:summary="@string/preferences_reminder_breakfast_summary"
             android:title="@string/preferences_reminder_breakfast" />
 
-        <Preference
+        <SwitchPreference
             android:key="PREFERENCE_LUNCH_REMINDER_TIME"
             android:summary="@string/preferences_reminder_lunch_summary"
             android:title="@string/preferences_reminder_lunch" />
 
-        <Preference
+        <SwitchPreference
             android:key="PREFERENCE_SNACK_REMINDER_TIME"
             android:summary="@string/preferences_reminder_snack_summary"
             android:title="@string/preferences_reminder_snack" />
 
-        <Preference
+        <SwitchPreference
             android:key="PREFERENCE_DINNER_REMINDER_TIME"
             android:summary="@string/preferences_reminder_dinner_summary"
             android:title="@string/preferences_reminder_dinner" />
 
+    </PreferenceCategory>
 </PreferenceScreen>
