--- a/app/src/main/res/layout/activity_add_new_meal_2.xml
+++ b/app/src/main/res/layout/activity_add_new_meal_2.xml
@@ -70,6 +70,8 @@
 
             <com.github.chuross.library.ExpandableLayout
                 android:id="@+id/list_meal_expandable_layout"
+
+                android:background="@null"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
