--- a/app/src/main/res/layout/image_collection_recycler_view_item.xml
+++ b/app/src/main/res/layout/image_collection_recycler_view_item.xml
@@ -1,20 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
+    android:background="@null"
     android:orientation="vertical"
     android:gravity="center"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/item_image"
-        android:src="@mipmap/ic_launcher"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:src="@drawable/meal_breakfast_flat"
+        android:layout_width="45dp"
+        android:layout_height="45dp" />
     <TextView
         android:id="@+id/item_name"
-        android:text="titlte"
+        android:text="@string/meal_breakfast"
         android:gravity="center"
+        android:textSize="11sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
