--- a/app/src/main/res/layout/list_foods_recycler_view_item_2.xml
+++ b/app/src/main/res/layout/list_foods_recycler_view_item_2.xml
@@ -24,21 +24,33 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_minus" />
 
-    <TextView
-        android:id="@+id/food_name_text_view"
+    <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_height="0dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="Food name"
-        android:textSize="16sp"
-        android:textStyle="bold"
+        android:gravity="center"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/food_quantity_text_view"
         app:layout_constraintStart_toEndOf="@+id/minus_one_button"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/food_name_text_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            tools:text="Arroz" />
+
+        <TextView
+            android:id="@+id/food_category_text_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:text="Comidas caseiras" />
+
+    </LinearLayout>
 
     <ImageButton
         android:id="@+id/plus_one_button"
