--- a/app/src/main/res/menu/add_foods_menu.xml
+++ b/app/src/main/res/menu/add_foods_menu.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item
-        android:id="@+id/save_foods_menu_item"
-        android:title="@string/save_meal"
-        android:icon="@drawable/ic_check"
+
+    <item android:id="@+id/search"
+        android:title="@string/search_foods"
+        android:icon="@drawable/ic_search"
+        app:showAsAction="collapseActionView|ifRoom"
+        app:actionViewClass="android.support.v7.widget.SearchView" />
+
+    <item android:id="@+id/done"
         app:showAsAction="always"
-        />
+        android:title="@string/confirm"/>
+
+
 </menu>
